# package_management_system

./: .replit  Procfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt  vercel.json
package/: admin.py  models.py  urls.py  views.py
package/migrations/: 0001_initial.py  0002_rename_installers_installer.py
package/templates/: main.html
package_suite/: asgi.py  settings.py  urls.py  wsgi.py
